--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,8 +26,14 @@ jobs:
         run: dotnet test ./WeatherApp.sln --configuration Release --no-build
 
   package-and-push:
+    needs:
+      - build-and-test
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.11
         with:
