--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,24 +35,29 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.11
+        with:
+          versionSpec: "5.x"
+
+      - name: Use GitVersion
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.11
+        with:
+          useConfigFile: true
+          configFilePath: GitVersion.yml
+
+      - name: What version
+        run: echo ${{ steps.gitversion.outputs.semVer }}
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: anand1912/weatherapp
+      - name: Docker Build 🧱
+        run: docker build -f ./src/WeatherApp.Api/Dockerfile -t anand1912/weatherapp:${{ steps.gitversion.outputs.majorMinorPatch }}
 
-      - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@v6
-        with:
-          context: ./src/WeatherApp.Api
-          file: ./src/WeatherApp.Api/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Docker Push ⬆️
+        run: docker push anand1912/weatherapp:${{ steps.gitversion.outputs.majorMinorPatch }}
